style: fix spacing between input wrapper

--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -109,6 +109,8 @@
     position: relative;
     width: 100%;
     transform: translate(-10px);
+    padding: 0 4px;
+
 }
 
 .login-input {
