--- a/style/summary_login/signup.css
+++ b/style/summary_login/signup.css
@@ -1,3 +1,6 @@
+.signup-card .login-form {
+    gap: 24px;
+}
 .signup-button-primary {
     max-width: 180px;
     display: block;
@@ -14,6 +17,7 @@
     padding: 0 16px;
     cursor: pointer;
     transition: all 0.3s ease;
+    margin-bottom: 10px;
 }
 
 .signup-button-primary:not(:disabled):hover {
@@ -64,7 +68,7 @@ button.signup-button-primary:disabled {
 }
 
 .signup-card {
-    margin-top: 120px;
+    margin-top: 140px;
 }
 
 .privacy-check {
